// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gateway should be able to customize the GatewayDest element 1`] = `
<section
  className="elf"
  id="striped"
/>
`;

exports[`Gateway should be able to customize the GatewayDest with custom components 1`] = `
<h1
  id="test"
/>
`;

exports[`Gateway should render Gateway in GatewayDest 1`] = `
<div>
  <section />
  <div>
    Hello World
  </div>
</div>
`;

exports[`Gateway should render into the correct GatewayDest 1`] = `
<div>
  <div>
    Two
  </div>
  <div>
    One
  </div>
</div>
`;

exports[`Gateway should render multiple children into a single GatewayDest 1`] = `
<div>
  <section>
    <div />
  </section>
  <div>
    <div>
      One
    </div>
    <div>
      Two
    </div>
    <div>
      Three
    </div>
  </div>
</div>
`;

exports[`Gateway should update Gateway child 1`] = `
<div>
  <div>
    Hello world
  </div>
</div>
`;

exports[`Gateway should update Gateway child 2`] = `
<div>
  <div>
    world
  </div>
</div>
`;

exports[`Gateway should update Gateway child 3`] = `
<div>
  <div />
</div>
`;

exports[`GatewayDest prop unmountOnEmpty should not render (or render) when no (or some) Gateways are registered and "unmountOnEmpty" is set  1`] = `<div />`;

exports[`GatewayDest prop unmountOnEmpty should not render (or render) when no (or some) Gateways are registered and "unmountOnEmpty" is set  2`] = `
<div>
  <div>
    Hello world
  </div>
</div>
`;

exports[`GatewayDest prop unmountOnEmpty should not render (or render) when no (or some) Gateways are registered and "unmountOnEmpty" is set  3`] = `<div />`;

exports[`GatewayDest prop unmountOnEmpty should render when there are Gateways registered and "unmountOnEmpty" is set  1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`GatewayDest should render div w/ className and component 1`] = `
<div>
  <span
    className="something"
  />
</div>
`;

exports[`GatewayDest should render div w/ className and component 2`] = `<div />`;
